syntax = "proto3";
package com.toy.stompchat.proto;

//option java_package = "com.example.demo";
//option java_outer_classname = "MessageProtos";

option java_multiple_files = true;

enum MsgTypeEnum {
  JOIN = 0;
  LEFT = 1;
  SAY = 2;
}

message MessageProto {
  MsgTypeEnum msgType = 1;
  oneof data_oneof {
    string data = 2;
    UserProto user = 3;
  }
  int64 date = 4;
}

message UserProto {
  int64 idx = 1;
  string name = 2;
}

message MessageArrProto {
  repeated MessageProto msgList = 1;
}